@@ -1,12 +1,10 @@
 use strict;
 use warnings;
 use Test::More;
-use String::ToIdentifier::EN ();
-use String::ToIdentifier::EN::Unicode ();
+use lib 't/lib';
+use TestString 'is_both';
 
 plan tests => (128 * 3) * 2;
-
-sub is_both;
 
 # First as CamelCase.
 
@@ -75,32 +73,32 @@ is_both ["\x3D"], 'equalsSign', 'equalsSign';
 is_both ["\x3E"], 'rightAngleBracket', 'rightAngleBracket';
 is_both ["\x3F"], 'questionMark', 'questionMark';
 is_both ["\x40"], 'atSign', 'atSign';
-is_both ["\x41"], 'a', 'A';
-is_both ["\x42"], 'b', 'B';
-is_both ["\x43"], 'c', 'C';
-is_both ["\x44"], 'd', 'D';
-is_both ["\x45"], 'e', 'E';
-is_both ["\x46"], 'f', 'F';
-is_both ["\x47"], 'g', 'G';
-is_both ["\x48"], 'h', 'H';
-is_both ["\x49"], 'i', 'I';
-is_both ["\x4A"], 'j', 'J';
-is_both ["\x4B"], 'k', 'K';
-is_both ["\x4C"], 'l', 'L';
-is_both ["\x4D"], 'm', 'M';
-is_both ["\x4E"], 'n', 'N';
-is_both ["\x4F"], 'o', 'O';
-is_both ["\x50"], 'p', 'P';
-is_both ["\x51"], 'q', 'Q';
-is_both ["\x52"], 'r', 'R';
-is_both ["\x53"], 's', 'S';
-is_both ["\x54"], 't', 'T';
-is_both ["\x55"], 'u', 'U';
-is_both ["\x56"], 'v', 'V';
-is_both ["\x57"], 'w', 'W';
-is_both ["\x58"], 'x', 'X';
-is_both ["\x59"], 'y', 'Y';
-is_both ["\x5A"], 'z', 'Z';
+is_both ["\x41"], 'A', 'A';
+is_both ["\x42"], 'B', 'B';
+is_both ["\x43"], 'C', 'C';
+is_both ["\x44"], 'D', 'D';
+is_both ["\x45"], 'E', 'E';
+is_both ["\x46"], 'F', 'F';
+is_both ["\x47"], 'G', 'G';
+is_both ["\x48"], 'H', 'H';
+is_both ["\x49"], 'I', 'I';
+is_both ["\x4A"], 'J', 'J';
+is_both ["\x4B"], 'K', 'K';
+is_both ["\x4C"], 'L', 'L';
+is_both ["\x4D"], 'M', 'M';
+is_both ["\x4E"], 'N', 'N';
+is_both ["\x4F"], 'O', 'O';
+is_both ["\x50"], 'P', 'P';
+is_both ["\x51"], 'Q', 'Q';
+is_both ["\x52"], 'R', 'R';
+is_both ["\x53"], 'S', 'S';
+is_both ["\x54"], 'T', 'T';
+is_both ["\x55"], 'U', 'U';
+is_both ["\x56"], 'V', 'V';
+is_both ["\x57"], 'W', 'W';
+is_both ["\x58"], 'X', 'X';
+is_both ["\x59"], 'Y', 'Y';
+is_both ["\x5A"], 'Z', 'Z';
 is_both ["\x5B"], 'leftBracket', 'leftBracket';
 is_both ["\x5C"], 'backslash', 'backslash';
 is_both ["\x5D"], 'rightBracket', 'rightBracket';
@@ -206,32 +204,32 @@ is_both ["\x3D", '_'], 'equals_sign', 'equals_sign';
 is_both ["\x3E", '_'], 'right_angle_bracket', 'right_angle_bracket';
 is_both ["\x3F", '_'], 'question_mark', 'question_mark';
 is_both ["\x40", '_'], 'at_sign', 'at_sign';
-is_both ["\x41", '_'], 'a', 'A';
-is_both ["\x42", '_'], 'b', 'B';
-is_both ["\x43", '_'], 'c', 'C';
-is_both ["\x44", '_'], 'd', 'D';
-is_both ["\x45", '_'], 'e', 'E';
-is_both ["\x46", '_'], 'f', 'F';
-is_both ["\x47", '_'], 'g', 'G';
-is_both ["\x48", '_'], 'h', 'H';
-is_both ["\x49", '_'], 'i', 'I';
-is_both ["\x4A", '_'], 'j', 'J';
-is_both ["\x4B", '_'], 'k', 'K';
-is_both ["\x4C", '_'], 'l', 'L';
-is_both ["\x4D", '_'], 'm', 'M';
-is_both ["\x4E", '_'], 'n', 'N';
-is_both ["\x4F", '_'], 'o', 'O';
-is_both ["\x50", '_'], 'p', 'P';
-is_both ["\x51", '_'], 'q', 'Q';
-is_both ["\x52", '_'], 'r', 'R';
-is_both ["\x53", '_'], 's', 'S';
-is_both ["\x54", '_'], 't', 'T';
-is_both ["\x55", '_'], 'u', 'U';
-is_both ["\x56", '_'], 'v', 'V';
-is_both ["\x57", '_'], 'w', 'W';
-is_both ["\x58", '_'], 'x', 'X';
-is_both ["\x59", '_'], 'y', 'Y';
-is_both ["\x5A", '_'], 'z', 'Z';
+is_both ["\x41", '_'], 'A', 'A';
+is_both ["\x42", '_'], 'B', 'B';
+is_both ["\x43", '_'], 'C', 'C';
+is_both ["\x44", '_'], 'D', 'D';
+is_both ["\x45", '_'], 'E', 'E';
+is_both ["\x46", '_'], 'F', 'F';
+is_both ["\x47", '_'], 'G', 'G';
+is_both ["\x48", '_'], 'H', 'H';
+is_both ["\x49", '_'], 'I', 'I';
+is_both ["\x4A", '_'], 'J', 'J';
+is_both ["\x4B", '_'], 'K', 'K';
+is_both ["\x4C", '_'], 'L', 'L';
+is_both ["\x4D", '_'], 'M', 'M';
+is_both ["\x4E", '_'], 'N', 'N';
+is_both ["\x4F", '_'], 'O', 'O';
+is_both ["\x50", '_'], 'P', 'P';
+is_both ["\x51", '_'], 'Q', 'Q';
+is_both ["\x52", '_'], 'R', 'R';
+is_both ["\x53", '_'], 'S', 'S';
+is_both ["\x54", '_'], 'T', 'T';
+is_both ["\x55", '_'], 'U', 'U';
+is_both ["\x56", '_'], 'V', 'V';
+is_both ["\x57", '_'], 'W', 'W';
+is_both ["\x58", '_'], 'X', 'X';
+is_both ["\x59", '_'], 'Y', 'Y';
+is_both ["\x5A", '_'], 'Z', 'Z';
 is_both ["\x5B", '_'], 'left_bracket', 'left_bracket';
 is_both ["\x5C", '_'], 'backslash', 'backslash';
 is_both ["\x5D", '_'], 'right_bracket', 'right_bracket';
@@ -337,32 +335,32 @@ is_both ["\x3D\x3D", '_'], '2_equals_signs', 'plural equals_sign';
 is_both ["\x3E\x3E", '_'], '2_right_angle_brackets', 'plural right_angle_bracket';
 is_both ["\x3F\x3F", '_'], '2_question_marks', 'plural question_mark';
 is_both ["\x40\x40", '_'], '2_at_signs', 'plural at_sign';
-is_both ["\x41\x41", '_'], 'aA', 'plural A';
-is_both ["\x42\x42", '_'], 'bB', 'plural B';
-is_both ["\x43\x43", '_'], 'cC', 'plural C';
-is_both ["\x44\x44", '_'], 'dD', 'plural D';
-is_both ["\x45\x45", '_'], 'eE', 'plural E';
-is_both ["\x46\x46", '_'], 'fF', 'plural F';
-is_both ["\x47\x47", '_'], 'gG', 'plural G';
-is_both ["\x48\x48", '_'], 'hH', 'plural H';
-is_both ["\x49\x49", '_'], 'iI', 'plural I';
-is_both ["\x4A\x4A", '_'], 'jJ', 'plural J';
-is_both ["\x4B\x4B", '_'], 'kK', 'plural K';
-is_both ["\x4C\x4C", '_'], 'lL', 'plural L';
-is_both ["\x4D\x4D", '_'], 'mM', 'plural M';
-is_both ["\x4E\x4E", '_'], 'nN', 'plural N';
-is_both ["\x4F\x4F", '_'], 'oO', 'plural O';
-is_both ["\x50\x50", '_'], 'pP', 'plural P';
-is_both ["\x51\x51", '_'], 'qQ', 'plural Q';
-is_both ["\x52\x52", '_'], 'rR', 'plural R';
-is_both ["\x53\x53", '_'], 'sS', 'plural S';
-is_both ["\x54\x54", '_'], 'tT', 'plural T';
-is_both ["\x55\x55", '_'], 'uU', 'plural U';
-is_both ["\x56\x56", '_'], 'vV', 'plural V';
-is_both ["\x57\x57", '_'], 'wW', 'plural W';
-is_both ["\x58\x58", '_'], 'xX', 'plural X';
-is_both ["\x59\x59", '_'], 'yY', 'plural Y';
-is_both ["\x5A\x5A", '_'], 'zZ', 'plural Z';
+is_both ["\x41\x41", '_'], 'AA', 'plural A';
+is_both ["\x42\x42", '_'], 'BB', 'plural B';
+is_both ["\x43\x43", '_'], 'CC', 'plural C';
+is_both ["\x44\x44", '_'], 'DD', 'plural D';
+is_both ["\x45\x45", '_'], 'EE', 'plural E';
+is_both ["\x46\x46", '_'], 'FF', 'plural F';
+is_both ["\x47\x47", '_'], 'GG', 'plural G';
+is_both ["\x48\x48", '_'], 'HH', 'plural H';
+is_both ["\x49\x49", '_'], 'II', 'plural I';
+is_both ["\x4A\x4A", '_'], 'JJ', 'plural J';
+is_both ["\x4B\x4B", '_'], 'KK', 'plural K';
+is_both ["\x4C\x4C", '_'], 'LL', 'plural L';
+is_both ["\x4D\x4D", '_'], 'MM', 'plural M';
+is_both ["\x4E\x4E", '_'], 'NN', 'plural N';
+is_both ["\x4F\x4F", '_'], 'OO', 'plural O';
+is_both ["\x50\x50", '_'], 'PP', 'plural P';
+is_both ["\x51\x51", '_'], 'QQ', 'plural Q';
+is_both ["\x52\x52", '_'], 'RR', 'plural R';
+is_both ["\x53\x53", '_'], 'SS', 'plural S';
+is_both ["\x54\x54", '_'], 'TT', 'plural T';
+is_both ["\x55\x55", '_'], 'UU', 'plural U';
+is_both ["\x56\x56", '_'], 'VV', 'plural V';
+is_both ["\x57\x57", '_'], 'WW', 'plural W';
+is_both ["\x58\x58", '_'], 'XX', 'plural X';
+is_both ["\x59\x59", '_'], 'YY', 'plural Y';
+is_both ["\x5A\x5A", '_'], 'ZZ', 'plural Z';
 is_both ["\x5B\x5B", '_'], '2_left_brackets', 'plural left_bracket';
 is_both ["\x5C\x5C", '_'], '2_backslashes', 'plural backslash';
 is_both ["\x5D\x5D", '_'], '2_right_brackets', 'plural right_bracket';
@@ -400,19 +398,3 @@ is_both ["\x7C\x7C", '_'], '2_pipe_chars', 'plural pipe_char';
 is_both ["\x7D\x7D", '_'], '2_right_braces', 'plural right_brace';
 is_both ["\x7E\x7E", '_'], '2_tildes', 'plural tilde';
 is_both ["\x7F\x7F", '_'], '2_delete_chars', 'plural delete_char';
-
-sub to_ascii {
-    return String::ToIdentifier::EN::to_identifier(@_)
-}
-
-sub to_unicode {
-    return String::ToIdentifier::EN::Unicode::to_identifier(@_)
-}
-
-sub is_both {
-    my @args = @{ +shift };
-    my ($expected, $test_name) = @_;
-
-    is to_ascii(@args),   $expected, $test_name;
-    is to_unicode(@args), $expected, $test_name;
-}
